# repo_pytest_practice

./: pyproject.toml
app/: calculator.py
tests/: calc_test.py
